--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
-    <meta name="keywords" content="Blender, DIY, Music, Zødiac, Zodiac, ZodiacFRA">
+    <meta name="keywords" content="Blender, DIY, Zødiac, Zodiac, ZodiacFRA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔻</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◾</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,7 +22,8 @@
             <a href='https://github.com/ZodiacFRA'>
                 <img class="header_icon" src="./images/misc/github.svg">
             </a>
-            <a href="mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - ">
+            <a href="./contact.html">
+            <!-- <a href="mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - "> -->
                 <img class="header_icon" src="./images/misc/email.svg">
             </a>
         </div>
@@ -320,7 +321,7 @@
                 <img src="./images/ORIX3.png"></img>
             </div>
     </div>
-<!----------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
             <div class="article_text">
               <h2>Orange Verte</h2><h3>Cinema 4D</h3><h3>Fevrier 2009</h3>
@@ -329,6 +330,6 @@
                 <img src="./images/orange.jpg"></img>
             </div>
     </div>
-<!----------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------EOF-->
      <script src="script.js"></script>
 </body>
