--- a/index.html
+++ b/index.html
@@ -331,5 +331,5 @@
             </div>
     </div>
 <!---------------------------------------------------------------------------EOF-->
-     <script src="script.js"></script>
+     <script src="https://zodiacfra.github.io/ZodiacFRA/script.js"></script>
 </body>
