--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
     <div class="article_container" href='./home.html'>
             <div class="article_text">
                 <h2>Gaia</h2><h3>Blender 3.0 Alpha - Cycles X</h3><h3>June 2021</h3>
-                <p>Presentation test of
-                    <a href="https://www.raphaeldelamorinerie.fr/">Raphaël's</a>
-                new Gaia font</p>
+                <p>Presentation test for Gaia, a font made by
+                    <a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie</a></p>
             </div><div></div>
             <div class="video_container">
                 <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/Kx8EhvC_DKE?autoplay=1&mute=1&loop=1">
