--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 <!---------------------------------------------------------------------------blender video-->
     <div class="article_container" href='./home.html'>
             <div class="article_text">
-                <h2>Gaia</h2><h3>Blender 3.0 Alpha - Cycles X</h3><h3>June 2021</h3>
-                <p>Presentation test for Gaia, a font made by
+                <h2>Gaya</h2><h3>Blender 3.0 Alpha - Cycles X</h3><h3>June 2021</h3>
+                <p>Presentation test for Gaya, a font made by
                     <a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie</a></p>
             </div><div></div>
             <div class="video_container">
