--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,17 @@
                 <img class="header_icon" src="./images/misc/github.svg">
             </a>
             <a href="mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - ">
-                <img class="header_icon" src="./images/misc/email.svg">
+                <img
+                    style="filter: brightness(0) saturate(100%) invert(89%) sepia(31%) saturate(425%) hue-rotate(6deg) brightness(107%) contrast(103%);"
+                    class="header_icon"
+                    src="./images/misc/email.svg"
+                >
             </a>
         </div>
     </header>
+    <h1 style="margin: auto; width: 50%; text-align: center; margin-top: 40px">
+        <a href='mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - '>
+            2tqdd9wpn@relay.firefox.com
+        </a>
+    </h1>
 </body>
