--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
             </div>
     </div> -->
 <!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
+    <!-- <div class="article_container" href='./home.html'>
             <div class="article_text">
               <h2>Colosse</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
             </div><div></div>
             <div class="article_image">
                 <img src="./images/colosse.jpg"></img>
             </div>
-    </div>
+    </div> -->
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
             <div class="article_text">
