--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1><a href='./index.html'>Zødiac</a></h1>
             <h3 style='margin-top: -20px'>Code & 3d art</h3>
         </div><div></div>
-        <div class="contact_icons">
+        <div class="header_icons">
             <a href='https://github.com/ZodiacFRA'>
                 <img class="header_icon" src="./images/misc/github.svg">
             </a>
