--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
         <div>
             <h1><a href='./index.html'>Zødiac</a></h1>
             <h3 style='margin-top: -20px'>Code & 3d art</h3>
-        </div><div></div>
+        </div>
         <div class="header_icons">
             <a href='https://github.com/ZodiacFRA'>
                 <img class="header_icon" src="./images/misc/github.svg">
             </a>
             <a href="./contact.html">
-            <!-- <a href="mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - "> -->
                 <img class="header_icon" src="./images/misc/email.svg">
             </a>
         </div>
