--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zødiac - Home</title>
+    <title>Zødiac - Contact</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -14,11 +14,11 @@
 
 <body>
     <header>
-        <div>
+        <div style="margin-right: 100px;">
             <h1><a href='./index.html'>Zødiac</a></h1>
             <h3 style='margin-top: -20px'>Code & 3d art</h3>
-        </div><div></div>
-        <div class="contact_icons">
+        </div>
+        <div class="header_icons">
             <a href='https://github.com/ZodiacFRA'>
                 <img class="header_icon" src="./images/misc/github.svg">
             </a>
@@ -31,8 +31,8 @@
             </a>
         </div>
     </header>
-    <h1 style="margin: auto; width: 50%; text-align: center; margin-top: 40px">
-        <a href='mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - '>
+    <h1>
+        <a class="centered_title" href='mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - '>
             2tqdd9wpn@relay.firefox.com
         </a>
     </h1>
