Added older page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zødiac - Home</title>
+    <title>Zodiac - Home</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div style="margin-right: 100px;">
-            <h1><a href='./index.html'>Zødiac</a></h1>
+            <h1><a href='./index.html'>Zodiac</a></h1>
             <h3 style='margin-top: -20px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
@@ -29,42 +29,42 @@
     </header>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
-              <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
-            </div><div></div>
-            <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/tau/3.1.png">
-                <img src="./images/tau/3.2.png">
-                <img src="./images/tau/3.3.png">
-            </div>
+        <div class="article_text">
+          <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
+          <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
+        </div><div></div>
+        <div class="slideshow_container" data-cycle="3000">
+            <img src="./images/tau/3.1.png">
+            <img src="./images/tau/3.2.png">
+            <img src="./images/tau/3.3.png">
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-                <h2>Parallel Dimensions</h2><h3>Blender - Cycles X</h3><h3>June 2021</h3>
-                <p>Created using the
-                    <a href="https://www.pny.com/promo/professional/parallel-dimensions">Parallel Dimensions Contest</a>
-                template files (not submitted tho)</p>
-            </div><div></div>
-            <div class="video_container">
-                <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/4l4iJoss6ek?autoplay=1&mute=1&loop=1">
-                </iframe>
-            </div>
+        <div class="article_text">
+            <h2>Parallel Dimensions</h2><h3>Blender - Cycles X</h3><h3>June 2021</h3>
+            <p>Created using the
+                <a href="https://www.pny.com/promo/professional/parallel-dimensions">Parallel Dimensions Contest</a>
+            template files (not submitted tho)</p>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/4l4iJoss6ek?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Ile des vivants / Ile des morts</h2><h3>Blender 3.0 - Cycles X</h3><h3>October 2021</h3>
-              <p></p>
-            </div><div></div>
-            <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/iles/morts nofog.png">
-                <img src="./images/iles/morts.png">
-                <img src="./images/iles/mortsz.png">
-                <img src="./images/iles/vivants.png">
-                <img src="./images/iles/vivants2.png">
-            </div>
+        <div class="article_text">
+          <h2>Ile des vivants / Ile des morts</h2><h3>Blender 3.0 - Cycles X</h3><h3>October 2021</h3>
+          <p></p>
+        </div><div></div>
+        <div class="slideshow_container" data-cycle="3000">
+            <img src="./images/iles/morts nofog.png">
+            <img src="./images/iles/morts.png">
+            <img src="./images/iles/mortsz.png">
+            <img src="./images/iles/vivants.png">
+            <img src="./images/iles/vivants2.png">
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
@@ -119,213 +119,105 @@
     </div>
 <!---------------------------------------------------------------------------blender video-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-                <h2>Gaya</h2><h3>Blender 3.0 Alpha - Cycles X</h3><h3>June 2021</h3>
-                <p>Presentation test for Gaya, a font made by
-                    <a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie</a></p>
-            </div><div></div>
-            <div class="video_container">
-                <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/Kx8EhvC_DKE?autoplay=1&mute=1&loop=1">
-                </iframe>
-            </div>
+        <div class="article_text">
+            <h2>Gaya</h2><h3>Blender 3.0 Alpha - Cycles X</h3><h3>June 2021</h3>
+            <p>Presentation test for Gaya, a font made by
+                <a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie</a></p>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/Kx8EhvC_DKE?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Farm</h2><h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>Octobre 2020</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/farm.png"></img>
-            </div>
+        <div class="article_text">
+          <h2>Farm</h2><h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>Octobre 2020</h3>
+        </div><div></div>
+        <div class="article_image">
+            <img src="./images/farm.png"></img>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Tout va bien</h2><h3>Blender Cycles</h3><h3>Avril 2021</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/tvb.png"></img>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender video-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-                <h2>Bird Skull PixelArt Test</h2><h3>Blender 2.91 Eevee</h3><h3>June 2021</h3>
-                <p></p>
-            </div><div></div>
-            <div class="video_container">
-                <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/bzI4PHsz-H4?autoplay=1&mute=1&loop=1">
-                </iframe>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>The Skull</h2><h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>Juin 2021</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/skull.png"></img>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Up / Down</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
-            </div><div></div>
-            <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/up_down/2updown.jpg">
-                <img src="./images/up_down/2updown2.jpg">
-                <img src="./images/up_down/2updown3.jpg">
-                <img src="./images/up_down/updown4.jpg">
-                <img src="./images/up_down/updown5.jpg">
-                <img src="./images/up_down/updown6.jpg">
-                <img src="./images/up_down/updown7.jpg">
-                <img src="./images/up_down/updownfunkg2ss.jpg">
-            </div>
+        <div class="article_text">
+          <h2>Tout va bien</h2><h3>Blender Cycles</h3><h3>Avril 2021</h3>
+        </div><div></div>
+        <div class="article_image">
+            <img src="./images/tvb.png"></img>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-                <h2>Logo animation test</h2><h3>Blender - Cycles</h3><h3>2017</h3>
-            </div><div></div>
-            <div class="video_container">
-                <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/BIAmGM0quHs?autoplay=1&mute=1&loop=1">
-                </iframe>
-            </div>
+        <div class="article_text">
+            <h2>Bird Skull PixelArt Test</h2><h3>Blender 2.91 Eevee</h3><h3>June 2021</h3>
+            <p></p>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/bzI4PHsz-H4?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Conq</h2><h3>Blender Cycles</h3><h3>2021</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/conq.png"></img>
-            </div>
+        <div class="article_text">
+          <h2>The Skull</h2><h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>Juin 2021</h3>
+        </div><div></div>
+        <div class="article_image">
+            <img src="./images/skull.png"></img>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Typhoon</h2><h3>Blender Cycles</h3><h3>2015</h3>
-              <p>Created using a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a> blueprint<p>
-            </div><div></div>
-            <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/typhoon/untitled4.jpg">
-                <img src="./images/typhoon/untitled5.1.jpg">
-                <img src="./images/typhoon/untitled5.2.jpg">
-                <img src="./images/typhoon/untitled5.3.jpg">
-                <img src="./images/typhoon/untitled5.jpg">
-            </div>
+        <div class="article_text">
+          <h2>Up / Down</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
+        </div><div></div>
+        <div class="slideshow_container" data-cycle="3000">
+            <img src="./images/up_down/2updown.jpg">
+            <img src="./images/up_down/2updown2.jpg">
+            <img src="./images/up_down/2updown3.jpg">
+            <img src="./images/up_down/updown4.jpg">
+            <img src="./images/up_down/updown5.jpg">
+            <img src="./images/up_down/updown6.jpg">
+            <img src="./images/up_down/updown7.jpg">
+            <img src="./images/up_down/updownfunkg2ss.jpg">
+        </div>
     </div>
-<!---------------------------------------------------------------------------blender-->
-    <!-- <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Cliff</h2><h3>Blender - Eevee</h3><h3>2018</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/cliff.jpg"></img>
-            </div>
-    </div> -->
-<!---------------------------------------------------------------------------blender-->
-    <!-- <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Colosse</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/colosse.jpg"></img>
-            </div>
-    </div> -->
-<!---------------------------------------------------------------------------blender-->
+<!---------------------------------------------------------------------------blender video-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>TriBot</h2><h3>Blender Cycles</h3><h3>2015</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/tribot.jpg"></img>
-            </div>
+        <div class="article_text">
+            <h2>Logo animation test</h2><h3>Blender - Cycles</h3><h3>2017</h3>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/BIAmGM0quHs?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Death</h2><h3>Blender Cycles</h3><h3>2016</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/death.jpg"></img>
-            </div>
+        <div class="article_text">
+          <h2>Conq</h2><h3>Blender Cycles</h3><h3>2021</h3>
+        </div><div></div>
+        <div class="article_image">
+            <img src="./images/conq.png"></img>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>TagBot</h2><h3>Blender Cycles</h3><h3>2015</h3>
-            </div><div></div>
-            <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/tag_bot/tag bot anim2 wp.jpg">
-                <img src="./images/tag_bot/tag bot.jpg">
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Planete boule</h2><h3>Blender Cycles</h3><h3>2017</h3>
-            </div><div></div>
-            <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/planete_boule/1 100.jpg">
-                <img src="./images/planete_boule/2 100.jpg">
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Fe</h2><h3>Blender Cycles</h3><h3>2015</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/fe.jpg"></img>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Wallpp</h2><h3>Blender Cycles</h3><h3>2015</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/4K.jpg"></img>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Ortho Bedroom</h2><h3>Blender Cycles</h3><h3>2016</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/ortho_bedroom.jpg"></img>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Stuka</h2><h3>Blender Cycles</h3><h3>Decembre 2016</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/stuka.jpg"></img>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Orix</h2><h3>Blender Internal</h3><h3>Mars 2013</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/ORIX3.png"></img>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Orange Verte</h2><h3>Cinema 4D</h3><h3>Fevrier 2009</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/orange.jpg"></img>
-            </div>
+        <div class="article_text">
+          <h2>Typhoon</h2><h3>Blender Cycles</h3><h3>2015</h3>
+          <p>Created using a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a> blueprint<p>
+        </div><div></div>
+        <div class="slideshow_container" data-cycle="3000">
+            <img src="./images/typhoon/untitled4.jpg">
+            <img src="./images/typhoon/untitled5.1.jpg">
+            <img src="./images/typhoon/untitled5.2.jpg">
+            <img src="./images/typhoon/untitled5.3.jpg">
+            <img src="./images/typhoon/untitled5.jpg">
+        </div>
     </div>
 <!---------------------------------------------------------------------------EOF-->
+    <h1></h1>
+    <h2 style="text-align: right;"><a href='./older.html'>Older ⭢</a></h2>
      <script src="https://zodiacfra.github.io/ZodiacFRA/script.js"></script>
 </body>
