--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zødiac - Contact</title>
+    <title>Zodiac - Contact</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div style="margin-right: 100px;">
-            <h1><a href='./index.html'>Zødiac</a></h1>
+            <h1><a href='./index.html'>Zodiac</a></h1>
             <h3 style='margin-top: -20px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
@@ -31,9 +31,9 @@
             </a>
         </div>
     </header>
-    <h1>
-        <a class="centered_title" href='mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - '>
+    <h2>
+        <a style="word-break: break-word;" class="centered_title" href='mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - '>
             2tqdd9wpn@relay.firefox.com
         </a>
-    </h1>
+    </h2>
 </body>
