older works re-arrangement

--- a/older.html
+++ b/older.html
@@ -47,12 +47,52 @@
     </div> -->
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
+        <div class="article_text">
+          <h2>The Skull</h2><h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>Juin 2021</h3>
+        </div><div></div>
+        <div class="article_image">
+            <img src="./images/skull.png"></img>
+        </div>
+    </div>
+<!---------------------------------------------------------------------------blender video-->
+    <div class="article_container" href='./home.html'>
+        <div class="article_text">
+            <h2>Bird Skull PixelArt Test</h2><h3>Blender 2.91 Eevee</h3><h3>June 2021</h3>
+            <p></p>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/bzI4PHsz-H4?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
+    </div>
+<!---------------------------------------------------------------------------blender-->
+    <div class="article_container" href='./home.html'>
+            <div class="article_text">
+              <h2>Planete boule</h2><h3>Blender Cycles</h3><h3>2017</h3>
+            </div><div></div>
+            <div class="slideshow_container" data-cycle="3000">
+                <img src="./images/planete_boule/1 100.jpg">
+                <img src="./images/planete_boule/2 100.jpg">
+            </div>
+    </div>
+<!---------------------------------------------------------------------------blender-->
+    <div class="article_container" href='./home.html'>
             <div class="article_text">
               <h2>TriBot</h2><h3>Blender Cycles</h3><h3>2015</h3>
             </div><div></div>
             <div class="article_image">
                 <img src="./images/tribot.jpg"></img>
             </div>
+    </div>
+<!---------------------------------------------------------------------------blender video-->
+    <div class="article_container" href='./home.html'>
+        <div class="article_text">
+            <h2>Logo animation test</h2><h3>Blender - Cycles</h3><h3>2017</h3>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/BIAmGM0quHs?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
@@ -71,16 +111,6 @@
             <div class="slideshow_container" data-cycle="3000">
                 <img src="./images/tag_bot/tag bot anim2 wp.jpg">
                 <img src="./images/tag_bot/tag bot.jpg">
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Planete boule</h2><h3>Blender Cycles</h3><h3>2017</h3>
-            </div><div></div>
-            <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/planete_boule/1 100.jpg">
-                <img src="./images/planete_boule/2 100.jpg">
             </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
