--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <title>Zodiac - Contact</title>
     <meta charset="utf-8">
-    <meta name="author" content="Zødiac">
+    <meta name="author" content="Zodiac">
     <meta name="description" content="Personal website">
     <meta name="keywords" content="Blender, DIY, Zødiac, Zodiac, ZodiacFRA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div style="margin-right: 100px;">
-            <h1><a href='./index.html'>Zodiac</a></h1>
+            <h1><a href='./index.html'>Zødiac</a></h1>
             <h3 style='margin-top: -20px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
