--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div style="margin-right: 100px;">
-            <h1><a href='./index.html'>Zodiac</a></h1>
+            <h1><a href='./index.html'>Zødiac</a></h1>
             <h3 style='margin-top: -20px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
