--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h2>Farm</h2><h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>Octobre 2020</h3>
         </div><div></div>
         <div class="article_image">
-            <img src="./images/farm.png"></img>
+            <img src="./images/farm.webp"></img>
         </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -144,7 +144,7 @@
           <h2>Tout va bien</h2><h3>Blender Cycles</h3><h3>Avril 2021</h3>
         </div><div></div>
         <div class="article_image">
-            <img src="./images/tvb.png"></img>
+            <img src="./images/tvb.webp"></img>
         </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -169,7 +169,7 @@
           <h2>Conq</h2><h3>Blender Cycles</h3><h3>2021</h3>
         </div><div></div>
         <div class="article_image">
-            <img src="./images/conq.png"></img>
+            <img src="./images/conq.webp"></img>
         </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
