--- a/older.html
+++ b/older.html
@@ -28,30 +28,12 @@
         </div>
     </header>
 <!---------------------------------------------------------------------------blender-->
-    <!-- <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Cliff</h2><h3>Blender - Eevee</h3><h3>2018</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/cliff.jpg"></img>
-            </div>
-    </div> -->
-<!---------------------------------------------------------------------------blender-->
-    <!-- <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Colosse</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/colosse.jpg"></img>
-            </div>
-    </div> -->
-<!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
         <div class="article_text">
           <h2>The Skull</h2><h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>Juin 2021</h3>
         </div><div></div>
         <div class="article_image">
-            <img src="./images/skull.png"></img>
+            <img src="./images/skull.webp"></img>
         </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
@@ -71,8 +53,26 @@
               <h2>Planete boule</h2><h3>Blender Cycles</h3><h3>2017</h3>
             </div><div></div>
             <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/planete_boule/1 100.jpg">
-                <img src="./images/planete_boule/2 100.jpg">
+                <img src="./images/planete_boule/1 100.webp">
+                <img src="./images/planete_boule/2 100.webp">
+            </div>
+    </div>
+<!---------------------------------------------------------------------------blender-->
+    <div class="article_container" href='./home.html'>
+            <div class="article_text">
+              <h2>Colosse</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
+            </div><div></div>
+            <div class="article_image">
+                <img src="./images/colosse.webp"></img>
+            </div>
+    </div>
+<!---------------------------------------------------------------------------blender-->
+    <div class="article_container" href='./home.html'>
+            <div class="article_text">
+              <h2>Stuka</h2><h3>Blender Cycles</h3><h3>Decembre 2016</h3>
+            </div><div></div>
+            <div class="article_image">
+                <img src="./images/stuka.webp"></img>
             </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -81,7 +81,7 @@
               <h2>TriBot</h2><h3>Blender Cycles</h3><h3>2015</h3>
             </div><div></div>
             <div class="article_image">
-                <img src="./images/tribot.jpg"></img>
+                <img src="./images/tribot.webp"></img>
             </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
@@ -100,7 +100,7 @@
               <h2>Death</h2><h3>Blender Cycles</h3><h3>2016</h3>
             </div><div></div>
             <div class="article_image">
-                <img src="./images/death.jpg"></img>
+                <img src="./images/death.webp"></img>
             </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -109,8 +109,8 @@
               <h2>TagBot</h2><h3>Blender Cycles</h3><h3>2015</h3>
             </div><div></div>
             <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/tag_bot/tag bot anim2 wp.jpg">
-                <img src="./images/tag_bot/tag bot.jpg">
+                <img src="./images/tag_bot/tag bot anim2 wp.webp">
+                <img src="./images/tag_bot/tag bot.webp">
             </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -119,7 +119,7 @@
               <h2>Fe</h2><h3>Blender Cycles</h3><h3>2015</h3>
             </div><div></div>
             <div class="article_image">
-                <img src="./images/fe.jpg"></img>
+                <img src="./images/fe.webp"></img>
             </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -128,7 +128,7 @@
               <h2>Wallpp</h2><h3>Blender Cycles</h3><h3>2015</h3>
             </div><div></div>
             <div class="article_image">
-                <img src="./images/4K.jpg"></img>
+                <img src="./images/4K.webp"></img>
             </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -137,16 +137,7 @@
               <h2>Ortho Bedroom</h2><h3>Blender Cycles</h3><h3>2016</h3>
             </div><div></div>
             <div class="article_image">
-                <img src="./images/ortho_bedroom.jpg"></img>
-            </div>
-    </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2>Stuka</h2><h3>Blender Cycles</h3><h3>Decembre 2016</h3>
-            </div><div></div>
-            <div class="article_image">
-                <img src="./images/stuka.jpg"></img>
+                <img src="./images/ortho_bedroom.webp"></img>
             </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -155,7 +146,7 @@
               <h2>Orix</h2><h3>Blender Internal</h3><h3>Mars 2013</h3>
             </div><div></div>
             <div class="article_image">
-                <img src="./images/ORIX3.png"></img>
+                <img src="./images/ORIX3.webp"></img>
             </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -164,7 +155,7 @@
               <h2>Orange Verte</h2><h3>Cinema 4D</h3><h3>Fevrier 2009</h3>
             </div><div></div>
             <div class="article_image">
-                <img src="./images/orange.jpg"></img>
+                <img src="./images/orange.webp"></img>
             </div>
     </div>
 <!---------------------------------------------------------------------------EOF-->
