--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
         </div><div></div>
         <div class="slideshow_container" data-cycle="3000">
-            <img src="./images/tau/3.1.png">
-            <img src="./images/tau/3.2.png">
-            <img src="./images/tau/3.3.png">
+            <img src="./images/tau/3.1.webp">
+            <img src="./images/tau/3.2.webp">
+            <img src="./images/tau/3.3.webp">
         </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
@@ -59,11 +59,11 @@
           <p></p>
         </div><div></div>
         <div class="slideshow_container" data-cycle="3000">
-            <img src="./images/iles/morts nofog.png">
-            <img src="./images/iles/morts.png">
-            <img src="./images/iles/mortsz.png">
-            <img src="./images/iles/vivants.png">
-            <img src="./images/iles/vivants2.png">
+            <img src="./images/iles/morts nofog.webp">
+            <img src="./images/iles/morts.webp">
+            <img src="./images/iles/mortsz.webp">
+            <img src="./images/iles/vivants.webp">
+            <img src="./images/iles/vivants2.webp">
         </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -153,14 +153,14 @@
           <h2>Up / Down</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
         </div><div></div>
         <div class="slideshow_container" data-cycle="3000">
-            <img src="./images/up_down/2updown.jpg">
-            <img src="./images/up_down/2updown2.jpg">
-            <img src="./images/up_down/2updown3.jpg">
-            <img src="./images/up_down/updown4.jpg">
-            <img src="./images/up_down/updown5.jpg">
-            <img src="./images/up_down/updown6.jpg">
-            <img src="./images/up_down/updown7.jpg">
-            <img src="./images/up_down/updownfunkg2ss.jpg">
+            <img src="./images/up_down/2updown.webp">
+            <img src="./images/up_down/2updown2.webp">
+            <img src="./images/up_down/2updown3.webp">
+            <img src="./images/up_down/updown4.webp">
+            <img src="./images/up_down/updown5.webp">
+            <img src="./images/up_down/updown6.webp">
+            <img src="./images/up_down/updown7.webp">
+            <img src="./images/up_down/updownfunkg2ss.webp">
         </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -179,11 +179,11 @@
           <p>Created using a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a> blueprint<p>
         </div><div></div>
         <div class="slideshow_container" data-cycle="3000">
-            <img src="./images/typhoon/untitled4.jpg">
-            <img src="./images/typhoon/untitled5.1.jpg">
-            <img src="./images/typhoon/untitled5.2.jpg">
-            <img src="./images/typhoon/untitled5.3.jpg">
-            <img src="./images/typhoon/untitled5.jpg">
+            <img src="./images/typhoon/untitled4.webp">
+            <img src="./images/typhoon/untitled5.1.webp">
+            <img src="./images/typhoon/untitled5.2.webp">
+            <img src="./images/typhoon/untitled5.3.webp">
+            <img src="./images/typhoon/untitled5.webp">
         </div>
     </div>
 <!---------------------------------------------------------------------------EOF-->
