foss preview changed

--- a/index.html
+++ b/index.html
@@ -70,51 +70,9 @@
     <div class="article_container" href='./home.html'>
             <div class="article_text">
               <h2>Semiotic Tower</h2><h3>Blender Cycles</h3><h3>May 2018</h3>
-              <!-- <p>Inspired by Jodorowsky's work</p> -->
             </div><div></div>
-            <div class="slideshow_container" data-cycle="200">
-                <img src="./images/foss/foss.jpg">
-                <img src="./images/foss/foss2.jpg">
-                <img src="./images/foss/foss3.jpg">
-                <img src="./images/foss/foss4.jpg">
-                <img src="./images/foss/foss5.jpg">
-                <img src="./images/foss/foss6.jpg">
-                <img src="./images/foss/foss7.jpg">
-                <img src="./images/foss/foss8.jpg">
-                <img src="./images/foss/foss9.jpg">
-                <img src="./images/foss/foss10.jpg">
-                <img src="./images/foss/foss10i.jpg">
-                <img src="./images/foss/foss11.jpg">
-                <img src="./images/foss/foss12.jpg">
-                <img src="./images/foss/foss13.jpg">
-                <img src="./images/foss/foss14.jpg">
-                <img src="./images/foss/foss15.jpg">
-                <img src="./images/foss/foss16.jpg">
-                <img src="./images/foss/foss17.jpg">
-                <img src="./images/foss/foss18.jpg">
-                <img src="./images/foss/foss19.jpg">
-                <img src="./images/foss/foss20.jpg">
-                <img src="./images/foss/foss21.jpg">
-                <img src="./images/foss/foss21b.jpg">
-                <img src="./images/foss/foss22.jpg">
-                <img src="./images/foss/foss22HD.jpg">
-                <img src="./images/foss/foss23.jpg">
-                <img src="./images/foss/foss23HD.jpg">
-                <img src="./images/foss/foss24.jpg">
-                <img src="./images/foss/foss25.jpg">
-                <img src="./images/foss/foss26.jpg">
-                <img src="./images/foss/foss27.jpg">
-                <img src="./images/foss/foss28.jpg">
-                <img src="./images/foss/foss29HD.jpg">
-                <img src="./images/foss/foss30.jpg">
-                <img src="./images/foss/foss30fun.jpg">
-                <img src="./images/foss/foss30fun2.jpg">
-                <img src="./images/foss/foss30fun3.jpg">
-                <img src="./images/foss/foss30fun4.jpg">
-                <img src="./images/foss/foss31.jpg">
-                <img src="./images/foss/foss32.jpg">
-                <img src="./images/foss/foss33HD2.jpg">
-                <img src="./images/foss/foss35HD4.jpg">
+            <div class="article_image">
+                <img src="./images/foss/foss35HD4.webp">
             </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
