--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
             <div class="article_text">
               <h2>Semiotic Tower</h2><h3>Blender Cycles</h3><h3>May 2018</h3>
             </div><div></div>
-            <div class="article_image">
+            <!-- <div class="article_image">
                 <img src="./images/foss/foss35HD4.webp">
+            </div> -->
+            <div class="slideshow_container" data-cycle="3000">
+                <img src="./images/foss/foss35HD4.webp">
+                <img src="./images/foss/anim.webp">
             </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
