removed most slideshows

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </div><div></div>
         <div class="slideshow_container" data-cycle="3000">
             <img src="./images/tau/3.1.webp">
-            <img src="./images/tau/3.2.webp">
-            <img src="./images/tau/3.3.webp">
+            <!-- <img src="./images/tau/3.2.webp"> -->
+            <!-- <img src="./images/tau/3.3.webp"> -->
         </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
@@ -59,11 +59,11 @@
           <p></p>
         </div><div></div>
         <div class="slideshow_container" data-cycle="3000">
-            <img src="./images/iles/morts nofog.webp">
+            <!-- <img src="./images/iles/morts nofog.webp"> -->
             <img src="./images/iles/morts.webp">
-            <img src="./images/iles/mortsz.webp">
+            <!-- <img src="./images/iles/mortsz.webp">
             <img src="./images/iles/vivants.webp">
-            <img src="./images/iles/vivants2.webp">
+            <img src="./images/iles/vivants2.webp"> -->
         </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -76,7 +76,7 @@
             </div> -->
             <div class="slideshow_container" data-cycle="3000">
                 <img src="./images/foss/foss35HD4.webp">
-                <img src="./images/foss/anim.webp">
+                <!-- <img src="./images/foss/anim.webp"> -->
             </div>
     </div>
 <!---------------------------------------------------------------------------blender video-->
@@ -115,14 +115,14 @@
           <h2>Up / Down</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
         </div><div></div>
         <div class="slideshow_container" data-cycle="3000">
-            <img src="./images/up_down/2updown.webp">
-            <img src="./images/up_down/2updown2.webp">
+            <!-- <img src="./images/up_down/2updown.webp"> -->
+            <!-- <img src="./images/up_down/2updown2.webp"> -->
             <img src="./images/up_down/2updown3.webp">
-            <img src="./images/up_down/updown4.webp">
-            <img src="./images/up_down/updown5.webp">
-            <img src="./images/up_down/updown6.webp">
-            <img src="./images/up_down/updown7.webp">
-            <img src="./images/up_down/updownfunkg2ss.webp">
+            <!-- <img src="./images/up_down/updown4.webp"> -->
+            <!-- <img src="./images/up_down/updown5.webp"> -->
+            <!-- <img src="./images/up_down/updown6.webp"> -->
+            <!-- <img src="./images/up_down/updown7.webp"> -->
+            <!-- <img src="./images/up_down/updownfunkg2ss.webp"> -->
         </div>
     </div>
 <!---------------------------------------------------------------------------blender-->
@@ -141,15 +141,15 @@
           <p>Created using a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a> blueprint<p>
         </div><div></div>
         <div class="slideshow_container" data-cycle="3000">
-            <img src="./images/typhoon/untitled4.webp">
+            <!-- <img src="./images/typhoon/untitled4.webp"> -->
             <img src="./images/typhoon/untitled5.1.webp">
-            <img src="./images/typhoon/untitled5.2.webp">
-            <img src="./images/typhoon/untitled5.3.webp">
-            <img src="./images/typhoon/untitled5.webp">
+            <!-- <img src="./images/typhoon/untitled5.2.webp"> -->
+            <!-- <img src="./images/typhoon/untitled5.3.webp"> -->
+            <!-- <img src="./images/typhoon/untitled5.webp"> -->
         </div>
     </div>
 <!---------------------------------------------------------------------------EOF-->
     <h1></h1>
     <h2 style="text-align: right;"><a href='./older.html'>Older ⭢</a></h2>
-     <script src="https://zodiacfra.github.io/ZodiacFRA/script.js"></script>
+    <!-- <script src="https://zodiacfra.github.io/ZodiacFRA/script.js"></script> -->
 </body>
