css cleanup + added tau project page + added dynamic line animations

--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
             </a>
         </div>
     </header>
+<!---------------------------------------------------------------------------COMMON END-->
     <h2>
         <a style="word-break: break-word;" class="centered_title" href='mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - '>
             2tqdd9wpn@relay.firefox.com
