--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
             </a>
         </div>
     </header>
+<!---------------------------------------------------------------------------COMMON END-->
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
         <div class="article_text">
-          <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
+          <h2><a href="./projects/tau.html">Tau</a></h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
           <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
         </div><div></div>
-        <div class="slideshow_container" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/tau.html" data-cycle="3000">
             <img src="./images/tau/3.1.webp">
             <!-- <img src="./images/tau/3.2.webp"> -->
             <!-- <img src="./images/tau/3.3.webp"> -->
-        </div>
+        </a>
     </div>
 <!---------------------------------------------------------------------------blender video-->
     <div class="article_container" href='./home.html'>
@@ -151,5 +152,5 @@
 <!---------------------------------------------------------------------------EOF-->
     <h1></h1>
     <h2 style="text-align: right;"><a href='./older.html'>Older ⭢</a></h2>
-    <!-- <script src="https://zodiacfra.github.io/ZodiacFRA/script.js"></script> -->
+    <!-- <script src="https://zodiacfra.github.io/ZodiacFRA/scripts/slideshow.js"></script> -->
 </body>
