--- a/older.html
+++ b/older.html
@@ -27,6 +27,7 @@
             </a>
         </div>
     </header>
+<!---------------------------------------------------------------------------COMMON END-->
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
         <div class="article_text">
@@ -159,5 +160,5 @@
             </div>
     </div>
 <!---------------------------------------------------------------------------EOF-->
-     <script src="https://zodiacfra.github.io/ZodiacFRA/script.js"></script>
+     <script src="https://zodiacfra.github.io/ZodiacFRA/slideshow.js"></script>
 </body>
