--- a/older.html
+++ b/older.html
@@ -160,5 +160,5 @@
             </div>
     </div>
 <!---------------------------------------------------------------------------EOF-->
-     <script src="https://zodiacfra.github.io/ZodiacFRA/slideshow.js"></script>
+     <script src="https://zodiacfra.github.io/ZodiacFRA/scripts/slideshow.js"></script>
 </body>
