--- a/older.html
+++ b/older.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zodiac - Home</title>
+    <title>Zodiac - Previous works</title>
     <meta charset="utf-8">
-    <meta name="author" content="Zodiac">
+    <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
     <meta name="keywords" content="Blender, DIY, Zødiac, Zodiac, ZodiacFRA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
     <header>
         <div style="margin-right: 100px;">
             <h1><a href='./index.html'>Zødiac</a></h1>
-            <h3 style='margin-top: -20px'>Code & 3d art</h3>
+            <h3 style='margin-top: -10px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
             <a href='https://github.com/ZodiacFRA'>
